# grid

./: .adr-config.yaml  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  README.zh.md  pyrightconfig.json
.github/workflows/: container-build.yml  desktop-ci.yml  eval-ci.yml  phase3-contract.yml
.planning/: .continue-here.md  HANDOFF.json  MEMORY.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RESUME-NEXT-SESSION.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v3.3-INBOX.md
.planning/handoffs/: 2026-07-20-phase3.7.2-complete-handoff.md  2026-07-20-session-handoff.md  2026-07-22-session-handoff.md
.planning/memory/: gsd-resume-context.md
.planning/milestones/: v3.3-REQUIREMENTS.md  v3.3-ROADMAP.md  v3.4-REQUIREMENTS.md
.planning/phases/03.7.1-grid-cli/: 3.7.1-01-PLAN.md  3.7.1-01-SUMMARY.md  3.7.1-02-PLAN.md  3.7.1-02-SUMMARY.md  3.7.1-03-CONTEXT.md  3.7.1-03-DISCUSSION-LOG.md  3.7.1-03-PLAN.md  3.7.1-03-SUMMARY.md
.planning/phases/03.7.2-web-production/: 03.7.2-UI-SPEC.md  03.7.2-VERIFICATION.md  3.7.2-01-PLAN.md  3.7.2-01-SUMMARY.md  3.7.2-02-PLAN.md  3.7.2-02-SUMMARY.md  3.7.2-CONTEXT.md  3.7.2-DISCUSSION-LOG.md
.planning/phases/03.7.3-eaasp-phase-0-2-5-phase-3-governance-hooks/: 03.7.3-01-PLAN.md  03.7.3-01-SUMMARY.md  03.7.3-02-PLAN.md  03.7.3-02-SUMMARY.md  03.7.3-CONTEXT.md  03.7.3-DISCUSSION-LOG.md  03.7.3-VERIFICATION.md
.planning/phases/03.8.0-jwt-primitive/: 03.8.0-01-PLAN.md  03.8.0-SUMMARY.md
.planning/phases/03.8.1-auth-endpoints/: 03.8.1-01-PLAN.md  03.8.1-SUMMARY.md
.planning/phases/03.8.2-rbac-tenant/: 03.8.2-01-PLAN.md  03.8.2-SUMMARY.md
.planning/phases/05.2-cli-hardening/: 05.2-01-PLAN.md  05.2-01-SUMMARY.md
.planning/phases/05.3-contract-evolution/: 05.3-01-PLAN.md  05.3-01-SUMMARY.md  05.3-02-PLAN.md  05.3-02-SUMMARY.md  05.3-CONTEXT.md  05.3-DISCUSSION-LOG.md  05.3-PATTERNS.md  05.3-RESEARCH.md  05.3-VALIDATION.md  05.3-VERIFICATION.md  deferred-items.md
.planning/phases/05.4-server-hardening/: 05.4-01-PLAN.md  05.4-01-SUMMARY.md  (+10 more)
.planning/research/: 2026-05-16-agent-loop-execution-mode-rfc.md  ARCHITECTURE.md  FEATURES.md  PHASE-5-0-GRAY-AREAS.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/grid-cli/: Cargo.toml
crates/grid-cli/src/: error.rs  lib.rs  main.rs  studio_main.rs
crates/grid-cli/src/commands/: agent.rs  ask.rs  config.rs  doctor.rs  mcp.rs  mod.rs  quickstart.rs  run.rs  session.rs  state.rs  types.rs
crates/grid-cli/src/repl/: slash.rs
crates/grid-cli/src/tui/: app_state.rs  key_handler.rs  mod.rs
crates/grid-cli/src/tui/key_handlers/: INVARIANTS.md  approval.rs  common.rs  history_search.rs  mod.rs  model_selector.rs  normal.rs  overlay.rs  slash_commands.rs  vim_insert.rs  vim_normal.rs
crates/grid-cli/tests/: S1_multi_step_tool_use.rs  S2_memory_driven.rs  S3_hook_governance.rs  S4_streaming_stop_resume.rs  S5_parallel_batch.rs  S6_mcp_logs.rs  cli_integration.rs  common_scenarios.rs  key_handler_integration.rs
crates/grid-cli/tests/common/: mod.rs
crates/grid-desktop/: Cargo.toml  tauri.conf.json
crates/grid-engine/: Cargo.toml
crates/grid-platform/: Cargo.toml
crates/grid-runtime/: Cargo.toml
crates/grid-server/: Cargo.toml
crates/grid-server/src/: config.rs  lib.rs  main.rs  router.rs  state.rs  ws.rs  ws_chunk.rs
crates/grid-server/src/api/: admin.rs  audit.rs  auth.rs  budget.rs  context.rs  hooks.rs  mod.rs  security.rs  sessions.rs
crates/grid-server/src/middleware/: audit.rs  auth.rs  mod.rs
crates/grid-server/tests/: api_hooks.rs  api_session_memory.rs  compaction_yaml_wiring.rs  migrate_race.rs  multi_user_auth_endpoints.rs  multi_user_jwt.rs  multi_user_rbac_tenant.rs  test_audit_and_rate_limit.rs  test_auth_modes.rs  test_hot_reload.rs  test_l2_stop_hook.rs  ws_chunk_envelope.rs
crates/grid-server/tests/common/: mod.rs  ws.rs
docs/: PROJECT_PRODUCT_OVERVIEW.md
docs/audit/: 3.7.1-GAP-AUDIT.md  3.7.2-GAP-AUDIT.md  3.7.3-GAP-AUDIT.md  HUMAN_VERIFICATION_3.7.2.md
docs/cli/: QUICKSTART.md  USER_GUIDE.md
docs/design/: RUST_BUILD_OPTIMIZATION.md  web-ui-tokens.md
docs/dev/: WORK_LOG.md
docs/status/: PRODUCTION_USABILITY_2026-07-19.md  PRODUCTION_USABILITY_2026-07-23.md  PRODUCT_STATUS_2026-07-17.md  WEB_PRODUCTION_USABILITY_2026-07-20.md
scripts/: check-key-handler-invariants.sh  proto-cli-sync-check.sh  test_hook_scripts.sh  verify-v2-mvp.py  verify-v2-mvp.sh  verify-v2-phase2.py  verify-v2-phase2.sh
scripts/_lib/: json_guards.sh
tests/contract/: conftest.py  test_harness_smoke.py  test_terminate_semantics.py
tools/eaasp-cli-v2/: pyproject.toml
tools/eaasp-common/: .gitignore  pyproject.toml
tools/eaasp-common/src/eaasp_common/: __init__.py  errors.py
tools/eaasp-common/tests/: test_errors.py
tools/eaasp-l2-memory-engine/: pyproject.toml
tools/eaasp-l3-governance/: pyproject.toml
tools/eaasp-l3-governance/src/eaasp_l3_governance/: api.py  audit.py  db.py  main.py  managed_settings.py  mcp_server.py  policy_engine.py
tools/eaasp-l3-governance/tests/: conftest.py  test_api.py  test_audit.py  test_audit_governance.py  test_gate_engine.py  test_mcp_server.py  test_policy_engine.py  test_session_validate.py
tools/eaasp-l4-orchestration/: pyproject.toml
web/: .gitignore  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
web-platform/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
web-platform/src/: App.tsx  globals.css
web/e2e/: S7-memory-toast.spec.ts  S7-stop-resume.spec.ts  S7-ws-reconnect.spec.ts
web/src/: globals.css
(+367 files in other folders)
