[package]
name = "grid-cli"
edition.workspace = true
version.workspace = true
description = "Grid CLI - Local CLI for interacting with Grid agents"

[lib]
name = "grid_cli"
path = "src/lib.rs"

[[bin]]
name = "grid"
path = "src/main.rs"

[features]
# Dashboard TLS for remote access (HTTPS + self-signed cert generation).
# Used by `make release` — pass via `--features dashboard-tls` for TLS builds.
dashboard-tls = ["dep:axum-server", "dep:rcgen"]

[dependencies]
# Internal crates
grid-types = { workspace = true }
grid-engine = { workspace = true }
grid-sandbox = { workspace = true }
grid-eval = { path = "../grid-eval" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures-util = { workspace = true }
async-trait = { workspace = true }

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Environment variables
dotenvy = { workspace = true }

# UUID for session/agent IDs
uuid = { workspace = true }

# Chrono for timestamps
chrono = { workspace = true }

# Interactive input
dialoguer = "0.11"

# Terminal rendering (shared by CLI and Studio)
termimad = "0.31"
indicatif = "0.17"
owo-colors = "4"

# Database
rusqlite = { workspace = true }

# REPL / line editing (CLI mode)
rustyline = { version = "17", features = ["with-file-history"] }

# XDG paths
directories = "6"

# TUI framework
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = { workspace = true }

# Web server (for embedded dashboard)
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Home directory detection (for TUI path shortener)
dirs = "6"

# Unicode character width calculation (for TUI)
unicode-width = "0.2"

# Gitignore-aware file traversal (for TUI autocomplete)
ignore = "0.4"

# TLS support (optional, for dashboard remote access)
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }

# Self-signed certificate generation (optional, for development TLS)
rcgen = { version = "0.13", optional = true }

[dev-dependencies]
tempfile = "3"
tower = { workspace = true }
http-body-util = "0.1"
