[project]
name = "eaasp-common"
version = "0.1.0"
description = "Shared utilities for EAASP Python tools — error sanitization, common helpers"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eaasp_common"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
