[project]
name = "eaasp-l3-governance"
version = "0.1.0"
description = "EAASP v2.0 L3 Governance Plane — Policy deployment + Telemetry ingest + Session validate"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20",
    "eaasp-common",
    "fastapi>=0.115",
    "httpx>=0.27",
    "loguru>=0.7",
    "mcp>=1.27",
    "pydantic>=2.8",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[project.scripts]
eaasp-l3-governance = "eaasp_l3_governance.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eaasp_l3_governance"]

[tool.uv.sources]
eaasp-common = { path = "../eaasp-common" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
